@@ -311,6 +311,11 @@ ant.project.default-target
                     the name of the currently executing project's
                     default target;  it is set via the default
                     attribute of &lt;project&gt;.
+ant.project.invoked-targets
+                    a comma separated list of the targets that have
+                    been specified on the command line (the IDE,
+                    an &lt;ant&gt; task ...) when invoking the current
+                    project.
 ant.java.version    the JVM version Ant detected; currently it can hold
                     the values &quot;1.2&quot;, &quot;1.3&quot;, &quot;1.4&quot; and &quot;1.5&quot;.
 </pre>
